--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,4 +5,12 @@
 @import "variables"
 @import "blocks/footer"
 @import "blocks/header"
+@import "blocks/main"
 
+body
+  font-family: 'Montserrat-Regular', sans-serif
+  font-size: 16px
+
+h1 
+  font-family: 'Montserrat-Bold', sans-serif
+  font-size: 48px
