--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,1 +1,25 @@
-
+@font-face {
+  font-family: 'Montserrat-Regular';
+  src: url('../fonts/Montserrat-Regular.woff') format('woff'),
+  url('../fonts/Montserrat-Regular.woff2') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: wrap;
+  }
+  @font-face {
+    font-family: 'Montserrat-Bold';
+    src: url('../fonts/Montserrat-Bold.woff') format('woff'),
+    url('../fonts/Montserrat-Bold.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: wrap;
+    }
+    @font-face {
+      font-family: 'Montserrat-SemiBold';
+      src: url('../fonts/Montserrat-SemiBold.woff') format('woff'),
+      url('../fonts/Montserrat-SemiBold.woff2') format('woff');
+      font-weight: normal;
+      font-style: normal;
+      font-display: wrap;
+      }
+  
