--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -14,3 +14,6 @@ body
 h1 
   font-family: 'Montserrat-Bold', sans-serif
   font-size: 48px
+h3
+  font-family: 'Montserrat-SemiBold', sans-serif
+  font-size: 16px
