--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -6,7 +6,7 @@
   font-style: normal;
   font-display: wrap;
   }
-  @font-face {
+@font-face {
     font-family: 'Montserrat-Bold';
     src: url('../fonts/Montserrat-Bold.woff') format('woff'),
     url('../fonts/Montserrat-Bold.woff2') format('woff');
@@ -14,12 +14,20 @@
     font-style: normal;
     font-display: wrap;
     }
-    @font-face {
-      font-family: 'Montserrat-SemiBold';
-      src: url('../fonts/Montserrat-SemiBold.woff') format('woff'),
-      url('../fonts/Montserrat-SemiBold.woff2') format('woff');
-      font-weight: normal;
-      font-style: normal;
-      font-display: wrap;
-      }
+@font-face {
+    font-family: 'Montserrat-SemiBold';
+    src: url('../fonts/Montserrat-SemiBold.woff') format('woff'),
+    url('../fonts/Montserrat-SemiBold.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: wrap;
+    }
+@font-face {
+    font-family: 'Montserrat-Light';
+    src: url('../fonts/Montserrat-Light.woff') format('woff'),
+    url('../fonts/Montserrat-Light.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: wrap;
+    }
   
