--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,8 @@
 @import "blocks/footer"
 @import "blocks/header"
 @import "blocks/main"
+@import "blocks/section-gallery"
+@import "blocks/section-form"
 
 body
   font-family: 'Montserrat-Regular', sans-serif
