--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -1,6 +1,6 @@
 .menu
   max-width: 1400px 
-  border: 1px solid red
+ 
   margin: 0 auto
   margin-top: 80px
   position: relative
@@ -45,14 +45,20 @@
     margin-top: -970px
     margin-left: 1250px
   &__more
-    display: none
-    border: 5px solid black
-    margin: 0 auto
+    & a
+      display: block
+      text-align: center
+    & img
+      margin-top: 50px
+     
+      width: 60px
+      height: 60px
+    
+    
 
 
 
 .page
-  
   &__element
     width: 260px
     height: 400px
@@ -64,44 +70,39 @@
     justify-content: center
     align-items: center
     
-    
-   
     & p 
       margin-left: 10px
       font-size: 12px
   
 .element 
   position: relative
-    &__foto
-      width: 170px
-      height: 170px
-    &__title
-      align-self: start
-      margin-left: 10px
-    &__size
-      align-self: flex-end
-      margin-right: 10px
-      margin-top: -30px
-      font-family: 'Montserrat-Regular', sans-serif
-      font-size: 12px
-      font-weight: normal
-    &__price
-      font-size: 24px
-      font-family: 'Montserrat-Light', sans-serif
-      margin-top: 20px
-      margin-bottom: 20px
-    &__basket
-      width: 33px
-      height: 33px
-      
-      margin-bottom: -40px
-      
-      
-      
-    &__absolute-icon
-      position: absolute
-      margin-top: -340px 
-      margin-left: -170px
+  &__foto
+    width: 170px
+    height: 170px
+    margin-top: 20px
+  &__title
+    align-self: start
+    margin-left: 10px
+    margin-top: 20px
+  &__size
+    align-self: flex-end
+    margin-right: 10px
+    margin-top: -30px
+    font-family: 'Montserrat-Regular', sans-serif
+    font-size: 12px
+    font-weight: normal
+  &__price
+    font-size: 24px
+    font-family: 'Montserrat-Light', sans-serif
+    margin-top: 10px
+  
+  &__absolute-icon
+    position: absolute
+    margin-top: -350px 
+    margin-left: -180px
+  &__basket
+    margin-bottom:
+    margin-top: 70px
 
 .rect
   border: 2px solid #ECEEF6
