--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -37,6 +37,8 @@
       font-size: 18px
     & img 
       margin-left: 150px
+
+    
       
 .nav
   
@@ -48,6 +50,8 @@
     margin-top: 10px
     
     margin-right: -60px
+    &:hover
+      transform: scale(1.2)
   &__icon3
     margin-top: -5px
 
