--- a/src/sass/blocks/_section-gallery.sass
+++ b/src/sass/blocks/_section-gallery.sass
@@ -40,6 +40,9 @@
         font-family: 'Montserrat-Regular', sans-serif
         & span
           font-family: 'Montserrat-Bold', sans-serif
+      &:hover
+        color: $dark
+        transform: scale(1.2)
         
 
       
