--- a/src/sass/blocks/_section-gallery.sass
+++ b/src/sass/blocks/_section-gallery.sass
@@ -28,7 +28,7 @@
     & a 
       height: 140px
       width: 440px
-      border: 2px solid #FFFFFF
+      border: 2px solid rgba(255, 255, 255, 0.1)
       border-radius: 15px
       display: flex
       justify-content: center
@@ -36,15 +36,10 @@
       text-decoration: none
       color: $light
       font-size: 24px
-      & p 
-        font-family: 'Montserrat-Regular', sans-serif
-        & span
-          font-family: 'Montserrat-Bold', sans-serif
+      font-family: 'Montserrat-Regular', sans-serif
+      & span
+        font-family: 'Montserrat-Bold', sans-serif
       &:hover
         color: $dark
         transform: scale(1.2)
-        
-
-      
-
     
