--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,9 +5,12 @@
 @import "variables"
 @import "blocks/footer"
 @import "blocks/header"
-@import "blocks/main"
+@import "blocks/menu"
 @import "blocks/section-gallery"
 @import "blocks/section-form"
+@import "blocks/section-result"
+@import "animation"
+
 
 body
   font-family: 'Montserrat-Regular', sans-serif
