--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -37,6 +37,8 @@
       font-size: 18px
     & img 
       margin-left: 150px
+  &__foto
+    animation: fall 2s ease 1s 1 
 
     
       
@@ -77,7 +79,7 @@
       color: orange
       font-weight: bold
 
-      
+   
     
 
     
