--- a/src/sass/blocks/_menu.sass
+++ b/src/sass/blocks/_menu.sass
@@ -2,11 +2,11 @@
   max-width: 1400px 
  
   margin: 0 auto
-  margin-top: 80px
+  margin-top: 40px
   position: relative
   & h1
     text-align: center
-    margin-top: 100px
+    margin-top: 50px
   &__group
     display: flex
     justify-content: space-around
@@ -33,7 +33,7 @@
     & a:hover
       cursor: pointer
       color: $light
-      background-color:#FE5626
+      background-color: $primary
   &__page
     display: flex
     flex-wrap: wrap
@@ -60,7 +60,8 @@
       &:hover
         cursor: pointer
         transform: scale(1.5) rotate(90deg)
-
+ 
+      
     
     
 
@@ -77,7 +78,10 @@
     flex-direction: column 
     justify-content: center
     align-items: center
-    
+    &:hover
+      cursor: pointer
+      border: 2px solid $primary
+      
     & p 
       margin-left: 10px
       font-size: 12px
@@ -115,7 +119,8 @@
       cursor: pointer
       transform: scale(1.5)
     &:active
-        background: url('/dist/img/icon-basket-orange.svg') center no-repeat
+        background-color: $primary
+        border-radius: 50%
 
 .rect
   border: 2px solid #ECEEF6
