--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -38,7 +38,10 @@
     & img 
       margin-left: 150px
   &__foto
-    animation: fall 2s ease 1s 1 
+    animation-name: slideBottom
+    animation-duration: 1s
+    animation-timing-function: ease
+    
 
     
       
