--- a/src/sass/blocks/_menu.sass
+++ b/src/sass/blocks/_menu.sass
@@ -81,10 +81,10 @@
     &:hover
       cursor: pointer
       border: 2px solid $primary
-      
     & p 
       margin-left: 10px
       font-size: 12px
+      align-self: start
   
 .element 
   position: relative
@@ -113,7 +113,8 @@
     margin-top: -350px 
     margin-left: -180px
   &__basket
-    margin-bottom:
+    widht: 33px
+    height: 33px
     margin-top: 70px
     &:hover
       cursor: pointer
