--- a/src/sass/blocks/_section-form.sass
+++ b/src/sass/blocks/_section-form.sass
@@ -6,7 +6,7 @@
   &__wrap
     width: 1400px
     margin: 0 auto
-    background: url('/dist/img/background2.png') no-repeat
+    background: url('../background2.png') no-repeat
     height: 590px
     & h1 
       text-align: center
