--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -2,7 +2,7 @@
   width: 100% 
   background-color: #F0F5FB
   &__wrap
-    background: url('../background.png') center no-repeat
+    background: url('../img/background.png') center no-repeat
     max-width: 1400px 
     margin: 0 auto
     border: 1px solid #F0F5FB
