--- a/src/sass/blocks/_section-form.sass
+++ b/src/sass/blocks/_section-form.sass
@@ -1,7 +1,8 @@
 *
-  outline:none
+  outline: none
 
 .form
+  position: relative
   background-color: #F0F5FB
   &__wrap
     width: 1400px
@@ -57,3 +58,9 @@
 
       &:first-child
         margin-left: 290px
+
+label
+  &.invalid
+
+    color: tomato
+    font-size: 0.86rem
