--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,6 @@
+main {
+  max-width: 100%; }
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -335,7 +338,7 @@ template {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  max-width: 1400px;
+  width: 100%;
   margin: 0 auto;
   margin-bottom: 65px;
   margin-top: 65px; }
