--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,5 +1,6 @@
 .header
-  width: 100% 
+  width: 100%
+  margin: 0 auto
   background-color: #F0F5FB
   &__wrap
     background: url('../img/background.png') center no-repeat
