--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,8 +11,11 @@
 @import "blocks/section-result"
 @import "animation"
 
+*
+  box-sizing: border-box
 
 body
+  width: 100%
   font-family: 'Montserrat-Regular', sans-serif
   font-size: 16px
 
