--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,3 @@
-* {
-  box-sizing: border-box; }
-
-main {
-  max-width: 100%; }
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -359,6 +353,7 @@ template {
 
 .header {
   width: 100%;
+  margin: 0 auto;
   background-color: #F0F5FB; }
   .header__wrap {
     background: url("../img/background.png") center no-repeat;
@@ -715,7 +710,11 @@ label.invalid {
   to {
     margin-top: -10px; } }
 
+* {
+  box-sizing: border-box; }
+
 body {
+  width: 100%;
   font-family: 'Montserrat-Regular', sans-serif;
   font-size: 16px; }
 
