--- a/src/sass/_setting.sass
+++ b/src/sass/_setting.sass
@@ -10,7 +10,9 @@ body
 .container
   margin: 0 auto
   max-width: 1256px
-  border: 1px solid red
+  width: 100%
+  height: 100%
+  box-sizing: border-box
 
 h1
   font-family: 'Montserrat-Bold', sans-serif
