--- a/src/sass/blocks/_menu.sass
+++ b/src/sass/blocks/_menu.sass
@@ -1,7 +1,8 @@
 .menu
+  position: relative
   margin: 0 auto
   margin-top: 40px
-  position: relative
+
   & h1
     text-align: center
     margin-top: 50px
@@ -37,15 +38,16 @@
     flex-wrap: wrap
     justify-content: space-around
     align-items: center
-    width: 80%
+    width: 100%
     margin: 0 auto
   &__background-icon1 
     position: absolute
     margin-top: -1050px
   &__background-icon2
     position: absolute
-    margin-top: -970px
-    margin-left: 500px
+    right: 0
+    top: 0
+
   &__more
     & a
       display: block
