--- a/src/sass/blocks/_section-gallery.sass
+++ b/src/sass/blocks/_section-gallery.sass
@@ -14,8 +14,8 @@
     margin-top: -145px
   &__instagram
     position: absolute
-    margin-top: -215px
-    margin-left: 455px
+    top: 12%
+    left: 31%
     width: 480px
     height: 180px
     background: linear-gradient(45.04deg, #FD9924 -51.05%, #F65B16 134.89%)
