--- a/src/sass/_setting.sass
+++ b/src/sass/_setting.sass
@@ -6,6 +6,8 @@ body
   width: 100%
   font-family: 'Montserrat-Regular', sans-serif
   font-size: 16px
+  @media (max-width: $desktop)
+    font-size: 14px
 
 .container
   margin: 0 auto
