--- a/src/css/style.css
+++ b/src/css/style.css
@@ -311,6 +311,9 @@ body {
   width: 100%;
   font-family: 'Montserrat-Regular', sans-serif;
   font-size: 16px; }
+  @media (max-width: 1024px) {
+    body {
+      font-size: 14px; } }
 
 .container {
   margin: 0 auto;
@@ -356,6 +359,7 @@ h3 {
   font-display: wrap; }
 
 .footer {
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -363,6 +367,10 @@ h3 {
   margin: 0 auto;
   margin-bottom: 65px;
   margin-top: 65px; }
+  @media (max-width: 768px) {
+    .footer {
+      font-size: 12px;
+      width: 90%; } }
   .footer a {
     text-decoration: none;
     color: black;
@@ -370,10 +378,21 @@ h3 {
     font-size: 16px; }
     .footer a span {
       font-family: 'Montserrat-Bold', sans-serif; }
+    @media (max-width: 768px) {
+      .footer a {
+        font-size: 12px;
+        margin-left: 20px; } }
     .footer a img {
       width: 96px;
       height: 50px;
       margin-top: -15px; }
+  @media (max-width: 480px) {
+    .footer__logo-footer {
+      position: absolute;
+      top: -50px; } }
+  @media (max-width: 480px) {
+    .footer__rights {
+      text-align: right; } }
 
 .header {
   width: 100%;
@@ -384,14 +403,26 @@ h3 {
     margin: 0 auto;
     border: 1px solid #F0F5FB;
     max-height: 880px; }
+    @media (max-width: 1256px) {
+      .header__wrap {
+        width: 95%; } }
   .header__nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-top: 30px; }
+    @media (max-width: 768px) {
+      .header__nav {
+        margin-top: 100px; } }
+    @media (max-width: 480px) {
+      .header__nav {
+        flex-direction: column; } }
     .header__nav a {
       text-decoration: none;
       color: black; }
+      @media (max-width: 480px) {
+        .header__nav a {
+          margin-top: 10px; } }
   .header__about {
     margin: 0 auto;
     max-width: 790px;
@@ -402,12 +433,25 @@ h3 {
     position: relative; }
     .header__about h1 {
       margin-top: 100px; }
+      @media (max-width: 768px) {
+        .header__about h1 {
+          text-align: center; } }
+      @media (max-width: 480px) {
+        .header__about h1 {
+          font-size: 24px; } }
     .header__about p {
       margin-top: 18px;
       width: 80%;
       font-size: 18px; }
+      @media (max-width: 480px) {
+        .header__about p {
+          font-size: 16px;
+          text-align: center; } }
     .header__about img {
       margin-left: 150px; }
+      @media (max-width: 768px) {
+        .header__about img {
+          width: 100%; } }
   .header__foto {
     animation-name: slideBottom;
     animation-duration: 1s;
@@ -417,34 +461,69 @@ h3 {
   margin-top: -16px;
   margin-right: 150px;
   margin-left: 220px; }
+  @media (max-width: 1256px) {
+    .nav__logo {
+      margin-right: 0;
+      margin-left: 0; } }
+  @media (max-width: 768px) {
+    .nav__logo {
+      position: absolute;
+      top: 20px; } }
 
 .nav__icon {
   margin-top: 10px;
   margin-right: -35px; }
   .nav__icon:hover {
     transform: scale(1.2); }
+  @media (max-width: 1024px) {
+    .nav__icon {
+      display: none; } }
 
 .nav__icon3 {
   margin-top: -5px; }
+  @media (max-width: 1024px) {
+    .nav__icon3 {
+      display: none; } }
 
 .nav__tel {
   font-size: 18px; }
+
+@media (max-width: 768px) {
+  .nav__time {
+    display: none; } }
 
 .absolute__icon {
   position: absolute;
   top: 50%;
   right: 27%; }
+  @media (max-width: 1024px) {
+    .absolute__icon {
+      display: none; } }
 
 .absolute__vector {
   position: absolute;
   right: 10%;
   top: 46%; }
+  @media (max-width: 1024px) {
+    .absolute__vector {
+      display: none; } }
 
 .absolute__text {
   position: absolute;
   right: -72%;
   top: 40%;
   font-size: 16px; }
+  @media (max-width: 1256px) {
+    .absolute__text {
+      right: -60%;
+      top: 38%; } }
+  @media (max-width: 1024px) {
+    .absolute__text {
+      right: -50%;
+      top: 32%; } }
+  @media (max-width: 768px) {
+    .absolute__text {
+      display: none; } }
   .absolute__text span {
     color: orange;
     font-weight: bold; }
@@ -453,13 +532,22 @@ h3 {
   position: relative;
   margin: 0 auto;
   margin-top: 40px; }
+  @media (max-width: 768px) {
+    .menu {
+      margin: 0 20px; } }
   .menu h1 {
     text-align: center;
     margin-top: 50px; }
+    @media (max-width: 480px) {
+      .menu h1 {
+        font-size: 24px; } }
   .menu__group {
     display: flex;
     justify-content: space-around;
     align-items: center; }
+    @media (max-width: 480px) {
+      .menu__group {
+        flex-direction: column; } }
     .menu__group a {
       font-size: 16px;
       border: 1px solid #ECEEF6;
@@ -471,14 +559,32 @@ h3 {
       text-decoration: none;
       margin-bottom: 50px;
       margin-top: 50px;
+      margin-right: 20px;
+      padding: 10px 15px;
       font-family: 'Montserrat-SemiBold', sans-serif;
       display: flex;
       align-items: center;
       justify-content: center; }
+      @media (max-width: 768px) {
+        .menu__group a {
+          width: 80px; } }
+      @media (max-width: 480px) {
+        .menu__group a {
+          margin-top: 10px;
+          margin-bottom: 0; } }
     .menu__group a:first-child {
       margin-left: 300px; }
+      @media (max-width: 768px) {
+        .menu__group a:first-child {
+          margin-left: 0; } }
     .menu__group a:last-child {
       margin-right: 300px; }
+      @media (max-width: 768px) {
+        .menu__group a:last-child {
+          margin-right: 0; } }
+      @media (max-width: 480px) {
+        .menu__group a:last-child {
+          margin-bottom: 10px; } }
     .menu__group a:hover {
       cursor: pointer;
       color: white;
@@ -509,7 +615,7 @@ h3 {
       transform: scale(1.5) rotate(90deg); }
 
 .page__element {
-  width: 260px;
+  max-width: 260px;
   height: 400px;
   border: 2px solid #ECEEF7;
   border-radius: 15px;
@@ -597,6 +703,9 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center; }
+    @media (max-width: 768px) {
+      .gallery__instagram {
+        width: 70%; } }
     .gallery__instagram a {
       height: 140px;
       width: 440px;
@@ -609,11 +718,21 @@ h3 {
       color: white;
       font-size: 24px;
       font-family: 'Montserrat-Regular', sans-serif; }
+      @media (max-width: 768px) {
+        .gallery__instagram a {
+          width: 90%;
+          font-size: 18px; } }
+      @media (max-width: 480px) {
+        .gallery__instagram a {
+          font-size: 16px; } }
       .gallery__instagram a span {
         font-family: 'Montserrat-Bold', sans-serif; }
       .gallery__instagram a:hover {
         color: black;
         transform: scale(1.2); }
+    @media (max-width: 1024px) {
+      .gallery__instagram {
+        left: 20%; } }
 
 * {
   outline: none; }
@@ -623,12 +742,20 @@ h3 {
   .form__wrap {
     margin: 0 auto;
     background: url("../img/background2.png") no-repeat;
+    width: 100%;
     height: 590px; }
+    @media (max-width: 1256px) {
+      .form__wrap {
+        width: 95%; } }
     .form__wrap h1 {
       text-align: center;
       margin-top: 80px;
       padding-top: 80px;
       line-height: 150%; }
+      @media (max-width: 768px) {
+        .form__wrap h1 {
+          font-size: 24px;
+          line-height: normal; } }
 
 .wrap__input-group {
   margin-top: 40px;
@@ -643,6 +770,15 @@ h3 {
     border-radius: 57px;
     box-sizing: border-box;
     padding-left: 20px; }
+    @media (max-width: 1024px) {
+      .wrap__input-group input, .wrap__input-group button {
+        width: 30%; } }
+    @media (max-width: 768px) {
+      .wrap__input-group input, .wrap__input-group button {
+        width: 42%; } }
+    @media (max-width: 480px) {
+      .wrap__input-group input, .wrap__input-group button {
+        padding-left: 0; } }
   .wrap__input-group button {
     background: linear-gradient(180deg, #FE5626 0%, #F23F0E 100%), #59AAF1;
     box-shadow: 0px 4px 8px rgba(205, 169, 41, 0.26);
@@ -651,6 +787,17 @@ h3 {
     font-family: 'Montserrat-Bold', sans-serif;
     font-size: 18px;
     color: white; }
+    @media (max-width: 1256px) {
+      .wrap__input-group button {
+        margin-right: 0; } }
+    @media (max-width: 768px) {
+      .wrap__input-group button {
+        display: block;
+        margin: 0 auto;
+        margin-top: 10px; } }
+    @media (max-width: 480px) {
+      .wrap__input-group button {
+        padding-top: 15px; } }
     .wrap__input-group button:hover {
       cursor: pointer;
       color: black; }
@@ -667,6 +814,9 @@ h3 {
     border: 3px solid #FE5626; }
   .wrap__input-group input:first-child {
     margin-left: 290px; }
+  @media (max-width: 1256px) {
+    .wrap__input-group input {
+      margin-left: 20px !important; } }
 
 .basic-form {
   position: relative; }
