--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -1,4 +1,5 @@
 .footer
+  position: relative
   display: flex
   justify-content: space-around
   align-items: center
@@ -6,6 +7,9 @@
   margin: 0 auto
   margin-bottom: 65px
   margin-top: 65px
+  @media (max-width: $tablet)
+    font-size: 12px
+    width: 90%
   & a 
     text-decoration: none
     color: $dark
@@ -13,8 +17,18 @@
     font-size: 16px
     & span
       font-family: 'Montserrat-Bold', sans-serif
+    @media (max-width: $tablet)
+      font-size: 12px
+      margin-left: 20px
     & img
       width: 96px
       height: 50px
       margin-top: -15px
+  &__logo-footer
+    @media (max-width: $mobile)
+      position: absolute
+      top: -50px
+  &__rights
+    @media (max-width: $mobile)
+      text-align: right
     
