--- a/src/sass/blocks/_menu.sass
+++ b/src/sass/blocks/_menu.sass
@@ -2,14 +2,22 @@
   position: relative
   margin: 0 auto
   margin-top: 40px
+  @media (max-width: $tablet)
+    margin: 0 20px
+
 
   & h1
     text-align: center
     margin-top: 50px
+    @media (max-width: $mobile)
+      font-size: 24px
   &__group
     display: flex
     justify-content: space-around
     align-items: center
+    @media (max-width: $mobile)
+      flex-direction: column
+
     & a
       font-size: 16px
       border: 1px solid #ECEEF6
@@ -21,18 +29,35 @@
       text-decoration: none
       margin-bottom: 50px
       margin-top: 50px
+      margin-right: 20px
+      padding: 10px 15px
+
       font-family: 'Montserrat-SemiBold', sans-serif
       display: flex
       align-items: center
       justify-content: center
+      @media (max-width: $tablet)
+        width: 80px
+      @media (max-width: $mobile)
+        margin-top: 10px
+        margin-bottom: 0
     & a:first-child
       margin-left: 300px
+      @media (max-width: $tablet)
+        margin-left: 0
+
+
     & a:last-child
       margin-right: 300px
+      @media (max-width: $tablet)
+        margin-right: 0
+      @media (max-width: $mobile)
+        margin-bottom: 10px
     & a:hover
       cursor: pointer
       color: $light
       background-color: $primary
+
   &__page
     display: flex
     flex-wrap: wrap
@@ -40,6 +65,7 @@
     align-items: center
     width: 100%
     margin: 0 auto
+
   &__background-icon1 
     position: absolute
     margin-top: -1050px
@@ -61,15 +87,9 @@
         cursor: pointer
         transform: scale(1.5) rotate(90deg)
  
-      
-    
-    
-
-
-
 .page
   &__element
-    width: 260px
+    max-width: 260px
     height: 400px
     border: 2px solid #ECEEF7
     border-radius: 15px
@@ -78,6 +98,7 @@
     flex-direction: column 
     justify-content: center
     align-items: center
+
     &:hover
       cursor: pointer
       border: 2px solid $primary
@@ -85,6 +106,9 @@
       margin-left: 10px
       font-size: 12px
       align-self: start
+
+
+
   
 .element 
   position: relative
@@ -92,6 +116,7 @@
     width: 170px
     height: 170px
     margin-top: 20px
+
   &__title
     align-self: start
     margin-left: 10px
