--- a/src/sass/blocks/_section-form.sass
+++ b/src/sass/blocks/_section-form.sass
@@ -2,17 +2,22 @@
   outline: none
 
 .form
-
   background-color: #F0F5FB
   &__wrap
     margin: 0 auto
     background: url('../img/background2.png') no-repeat
+    width: 100%
     height: 590px
+    @media (max-width: $desktop-full)
+      width: 95%
     & h1 
       text-align: center
       margin-top: 80px
       padding-top: 80px
       line-height: 150%
+      @media (max-width: $tablet)
+        font-size: 24px
+        line-height: normal
 .wrap   
   &__input-group
     margin-top: 40px
@@ -26,7 +31,14 @@
       border: 2px solid #ECEEF7
       border-radius: 57px
       box-sizing: border-box
-      padding-left: 20px  
+      padding-left: 20px
+      @media (max-width: $desktop)
+        width: 30%
+      @media (max-width: $tablet)
+        width: 42%
+      @media (max-width: $mobile)
+        padding-left: 0
+
     & button
       background: linear-gradient(180deg, #FE5626 0%, #F23F0E 100%), #59AAF1
       box-shadow: 0px 4px 8px rgba(205, 169, 41, 0.26)
@@ -35,6 +47,18 @@
       font-family: 'Montserrat-Bold', sans-serif
       font-size: 18px
       color: $light
+      @media (max-width: $desktop-full)
+        margin-right: 0
+      @media (max-width: $tablet)
+        display: block
+        margin: 0 auto
+        margin-top: 10px
+      @media (max-width: $mobile)
+        padding-top: 15px
+
+
+
+
       &:hover
         cursor: pointer
        
@@ -42,6 +66,7 @@
       &:active, &:focus
         border: 0 
         outline: none
+
         
       & img
         width: 32px
@@ -57,8 +82,12 @@
 
       &:first-child
         margin-left: 290px
+      @media (max-width: $desktop-full)
+        margin-left: 20px!important
+
 .basic-form
   position: relative
+
 
 label
   &.invalid
